<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- SCOOTER NAME -->
    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scooter_name"/>


        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textIsSelectable="false"
            android:text="@string/scooter_name"/>
    </LinearLayout>

    <!-- LOCATION -->
    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scooter_location"/>

        <EditText
            android:id="@+id/location_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/scooter_location_input_hint"/>
    </LinearLayout>


    <Button
        android:id="@+id/button_start_ride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_ride_button"
        tools:ignore="MissingConstraints" />


</LinearLayout>